MODINV-1241 refactor handling of additional call numbers
- extract common properties into a new object additonalCallNumber
- renaming
- bump api version and requiered storage versions
- update news